added github action for building and deployement
- added some scripts to install other dependencies that have npx custom commands instead of npm install

--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "shadcn-init": "npx shadcn-ui@latest init",
+    "preinstall": "npm shadcn-init",
+    "install": "npm install",
     "dev": "vite",
     "build": "cd ./chroma-wasm && wasm pack build --target web && cd .. && tsc -b && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
