--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,23 +15,20 @@ jobs:
         with:
           submodules: true
 
-      - name: Install Rust and wasm tools
-        run: |
-          curl https://sh.rustup.rs -sSf | sh -s -- -y
-          source $HOME/.cargo/env
-          rustup target add wasm32-unknown-unknown
-          cargo install wasm-pack
-
-      - name: Build wasm from rust
-        run: |
-          cd ./chroma-wasm
-          wasm-pack build --target web
-
       - name: Install Node.js
         uses: actions/setup-node@v4
         with:
           node-version: '20.x'
           cache: 'npm'
+
+      - name: Install wasm-pack
+        run: |
+          npm install -g wasm-pack
+
+      - name: Build wasm module
+        run: |
+          cd ./chroma-wasm
+          wasm-pack build --target web
 
       - name: Install dependencies
         run: npm install
@@ -39,10 +36,15 @@ jobs:
       - name: Build project
         run: npm run build
 
-      - name: Deploy to Vercel
+      - name: Link project to Vercel
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
-          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
         run: |
-          npx vercel --prod --token $VERCEL_TOKEN --scope $VERCEL_ORG_ID --project $VERCEL_PROJECT_ID
+          echo "y" | npx vercel link --token $VERCEL_TOKEN --project $VERCEL_PROJECT_ID --confirm
+
+      - name: Deploy to Vercel
+        env:
+          VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+        run: |
+          npx vercel --prod --token $VERCEL_TOKEN
