--- a/package.json
+++ b/package.json
@@ -61,6 +61,10 @@
     "postcss": "^8.4.39",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
-  }
+    "vite": "^5.3.1",
+    "wasm-pack": "^0.13.0"
+  },
+  "trustedDependencies": [
+    "wasm-pack"
+  ]
 }
