--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,5 +47,6 @@ jobs:
       - name: Deploy to Vercel
         env:
           VERCEL_TOKEN: ${{ secrets.VERCEL_TOKEN }}
+          VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
         run: |
-          echo "y" | npx vercel --prod --token $VERCEL_TOKEN
+          echo "y" | npx vercel --prod --token $VERCEL_TOKEN --scope $VERCEL_ORG_ID
