<chore> - added v-0.5 patch note

--- a/public/patch-notes/manifest.json
+++ b/public/patch-notes/manifest.json
@@ -1,3 +1,10 @@
 {
-  "files": ["v-0.1.md", "v-0.2.md", "v-0.3.md", "v-0.4.md", "v-0.41.md"]
+  "files": [
+    "v-0.1.md",
+    "v-0.2.md",
+    "v-0.3.md",
+    "v-0.4.md",
+    "v-0.41.md",
+    "v-0.5.md"
+  ]
 }
