--- a/package.json
+++ b/package.json
@@ -28,17 +28,21 @@
     "@radix-ui/react-toggle": "^1.1.0",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@types/node": "^20.14.9",
+    "@types/react-copy-to-clipboard": "^5.0.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
     "framer-motion": "^11.3.21",
     "html2canvas": "^1.4.1",
     "lucide-react": "^0.400.0",
+    "next-themes": "^0.3.0",
     "react": "^18.3.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-markdown": "^9.0.1",
+    "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
