--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
     "next-themes": "^0.3.0",
     "react": "^18.3.1",
     "react-copy-to-clipboard": "^5.1.0",
-    "react-day-picker": "^8.10.1",
+    "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-markdown": "^9.0.1",
