feat - starting to work on the new UI
- changed the name of some fimes (favicon is now favicon.ico, manifest in patch-notes became list.json)
- adding PWA functionnalities (added manifest.json)
- created new folder for new UI
- removed package.lock.json
- added overlayed menu

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "cd ./chroma-wasm && wasm-pack build --target web && cd .. && tsc -b && vite build",
+    "build": "cd ./chroma-wasm && wasm-pack build --target web && cd .. && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
@@ -45,6 +45,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.52.1",
     "react-markdown": "^9.0.1",
+    "react-zoom-pan-pinch": "^3.6.1",
     "sonner": "^1.5.0",
     "swr": "^2.2.5",
     "tailwind-merge": "^2.3.0",
@@ -58,6 +59,7 @@
     "@tailwindcss/typography": "^0.5.14",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/serviceworker": "^0.0.94",
     "@typescript-eslint/eslint-plugin": "^7.13.1",
     "@typescript-eslint/parser": "^7.13.1",
     "@vitejs/plugin-react": "^4.3.1",
